<resources>
    <string name="app_name">BeatWell</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_image">Card Image</string>
    <string name="card_title">Card Title</string>
    <string name="card_desctiption">Card Description</string>
    <string name="exercise_heading">Recommended Activities</string>
    <string name="exercise_tagline">Some activities you can do</string>
    <string name="food_heading">Food Recommendations</string>
    <string name="food_tagline">Some food recommendations suitable for your condition!</string>
    <string name="news_heading">Health News</string>
    <string name="news_tagline">Reliable and Latest Information for a Healthy Lifestyle, Daily Inspiration</string>
    <string name="history_heading">History</string>
    <string name="history_tagline">Check your coronary heart disease risk history</string>
    <string name="result_heading">Analysis Result</string>
    <string name="result_tagline">Here is the prediction result of your analysis</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_food">Food</string>
    <string name="title_news">News</string>
    <string name="title_history">History</string>
    <string name="setting_heading">Settings</string>
    <string name="title_setting">Settings</string>
    <string name="app_tagline">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="error_password">The password must be more than 8 characters!</string>
    <string name="login">Login</string>
    <string name="text_signup">Dont have an account yet? <b>Sign up</b></string>
    <string name="password">Password</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_verify_password">Verify Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_login">Already have an account? <b>Login</b></string>
    <string name="type_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="register_success">Registration Successful</string>
    <string name="prediction_result">%s%%</string>
    <string name="prediction_date">Prediction Date</string>
    <string name="begin_prediction">Start Prediction</string>
    <string name="last_prediction_result_heading">Last Prediction Result</string>
    <string name="last_prediction_result_desc">Your last prediction result</string>
    <string name="exercise_heading_desc">Your activity recommendations for today</string>
    <string name="exercise_name">Activity Name</string>
    <string name="exercise_desc">Activity Description</string>
    <string name="prediction_heading">Risk Prediction</string>
    <string name="prediction_desc">Fill out the fields below according to your condition</string>
    <string name="label_age">Age</string>
    <string name="cig_label">Number of cigarettes per day</string>
    <string name="chol_label">Total Cholesterol (mg/dl)</string>
    <string name="systolik_label">Systolic Blood Pressure (mg/dl)</string>
    <string name="diastolik_label">Diastolic Blood Pressure (mmHg)</string>
    <string name="bmi_label">BMI Value</string>
    <string name="heart_label">Heart Rate (bp/m)</string>
    <string name="glucose_label">Glucose Level (mg/dl)</string>
    <string name="gender_label">Gender</string>
    <string name="bpmeds_label">Are you taking blood pressure medication?</string>
    <string name="stroke_label">Do you have a history of stroke?</string>
    <string name="hipertensi_label">Do you have a history of hypertension?</string>
    <string name="diabetes_label">Do you have a history of diabetes?</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="result_overview">From the analysis results, your CHD risk is:</string>
    <string name="user_data_text">Here is your data:</string>
    <string name="cigs_day">Cigs/Day</string>
    <string name="cholestrol">Cholesterol</string>
    <string name="systolik">Systolic Blood Pressure</string>
    <string name="diastolik">Diastolic Blood Pressure</string>
    <string name="bmi">BMI</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="Glucose">Glucose</string>
    <string name="stroke">History of Stroke</string>
    <string name="hypertensi">History of Hypertension</string>
    <string name="diabete">Diabetes</string>
    <string name="bpmeds">Blood Pressure Medication</string>
    <string name="number_dummy">45</string>
    <string name="news_desc">News Description</string>
    <string name="tanggal_berita">News Date</string>
    <string name="date">Date</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_dummy">- Vegetables\n- Salt\n- Chili</string>
    <string name="how_to_cook">How to Cook</string>
    <string name="how_to_cook_dummy">- Vegetables\n- Salt\n- Chili</string>
    <string name="trivia">Trivia</string>
    <string name="activate_alarm">Activate Alarm</string>
    <string name="activity_image">Activity Image</string>
    <string name="text_username">Username</string>
    <string name="username_email">username@gmail.com</string>
    <string name="text_account">Account</string>
    <string name="text_account_detail">Edit Account</string>
    <string name="text_delete_account">Delete Account</string>
    <string name="text_logout">Logout</string>
    <string name="text_feedback">Give Feedback</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_general">General</string>
    <string name="text_laguage">Language</string>
    <string name="text_next">Next</string>
    <string name="button_chat_bot">Chat Bot Button</string>
    <string name="beatwell_tagline">Early Detection, Healthy Heart, Meaningful Life</string>
    <string name="text_chatbot_heading">Ask any complaints or questions related to your heart disease</string>
    <string name="heart_image">Heart Image</string>
    <string name="height_label">Height (cm)</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="text_no_data">No Data Yet</string>
    <string name="text_data_confirmation">Data Confirmation</string>
    <string name="text_desc_data_confirmation">Is the data correct and you want to continue?</string>
    <string name="language_button">language button</string>
    <string name="text_welcome">welcome</string>
    <string name="text_login_error">wrong password or email</string>
    <string name="text_edit_account">Edit account</string>
    <string name="cancel">cancel</string>
    <string name="text_confirm_exit">Confirm Exit</string>
    <string name="text_desc_confirm_exit">Are you sure you want to quit?</string>
    <string name="text_time_to_sleep">It\'s time to sleep, let\'s rest</string>
    <string name="text_password_doesnt_match">Password is not the same</string>
    <string name="text_warning">warning</string>
    <string name="text_early_prediction">This is an early prediction. For further examination please see a doctor</string>
</resources>
