<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:backgroundTint="@color/moss_green"
    android:padding="16dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_1">

        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/card_image"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_title"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_news"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desc"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_news"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tanggal_berita"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>