<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.foodDetail.FoodDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_detail_food"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:transitionName="image"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:transitionName="name"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_food"
            tools:text="@string/title_food"/>

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/heading_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textStyle="bold"
            android:text="@string/ingredients"
            app:layout_constraintTop_toBottomOf="@id/view_separator"/>

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/ingredients_dummy"
            app:layout_constraintTop_toBottomOf="@id/heading_ingredient"/>

        <TextView
            android:id="@+id/heading_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/how_to_cook"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients"/>

        <TextView
            android:id="@+id/tv_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/how_to_cook_dummy"
            app:layout_constraintTop_toBottomOf="@id/heading_recipe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>